Added Squirtle, Wartortle, Blastoise data.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1117,14 +1117,14 @@ gender_ratio_m = 87.5
 average_hatch_rate_days = 10
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:2,Fountain,Naturewalk:Wetland,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 1'8",0.5m
+height_class = Small
+weight = 19.8 lbs.,9.0kg
+weight_class = 1
+skills = Athletics:2d6+2,Acrobatics:3d6+2,Combat:2d6,Stealth:3d6,Perception:3d6,Focus:2d6+3
+level_moves = 1:Tackle, 4:Tail Whip, 7:Bubble, 10:Withdraw, 13:Water Gun, 16:Bite, 19:Rapid Spin, 22:Protect, 25:Water Pulse, 28:Aqua Tail, 31:Skull Bash, 34:Iron Defense, 37:Rain Dance, 40:Hydro Pump
 hm_moves = Surf,Strength,Waterfall,Dive
-tm_moves = 
+tm_moves = Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Protect, Rain Dance, Frustration, Return, Dig, Brick Break, Double Team, Rock Tomb, Facade, Rest, Attract, Round, Scald, Fling, Gyro Ball, Swagger, Sleep Talk, Substitute, Rock Smash, Power-Up Punch, Confide
 egg_moves = Aqua Jet, Aqua Ring, Aura Sphere, Brine, Dragon Pulse, Fake Out, Flail, Foresight, Haze, Mirror Coat, Mist, Mud Sport, Muddy Water, Refresh, Water Spout, Yawn
 tutor_moves = Aqua Tail, Body Slam, Counter, Defense Curl, Dive, Double-Edge, Dynamic Punch, Focus Punch, Ice Punch, Icy Wind, Iron Defense, Iron Tail, Mega Kick, Mega Punch, Mud-Slap, Rollout, Seismic Toss, Sleep Talk, Snore, Water Pledge, Zen Headbutt
 [Wartortle]
@@ -1148,14 +1148,14 @@ egg_groups = Monster,Water 1
 gender_ratio_m = 87.5
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:4,Fountain,Naturewalk:Wetlands,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 3'3",1.0m
+height_class = Medium
+weight = 49.6 lbs.,22.5kg
+weight_class = 2
+skills = Athletics:3d6+2,Acrobatics:3d6+2,Combat:3d6+1,Stealth:3d6+2,Perception:3d6,Focus:3d6+3
+level_moves = 4:Tail Whip, 7:Bubble, 10:Withdraw, 13:Water Gun, 16:Bite, 20:Rapid Spin, 24:Protect, 28:Water Pulse, 32:Aqua Tail, 36:Skull Bash, 40:Iron Defense, 44:Rain Dance, 48:Hydro Pump
 hm_moves = Surf,Strength,Waterfall,Dive
-tm_moves = 
+tm_moves = Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Protect, Rain Dance, Frustration, Return, Dig, Brick Break, Double Team, Rock Tomb, Facade, Rest, Attract, Round, Scald, Fling, Gyro Ball, Swagger, Sleep Talk, Substitute, Rock Smash, Power-Up Punch, Confide
 tutor_moves = Aqua Tail, Body Slam, Brine, Counter, Defense Curl, Double-Edge, Dive, Dynamic Punch, Focus Punch, Ice Punch, Icy Wind, Iron Defense, Iron Tail, Mega Kick, Mega Punch, Mud-Slap, Rollout, Seismic Toss, Sleep Talk, Snore, Water Pledge, Zen Headbutt
 [Blastoise]
 page = 50
@@ -1177,14 +1177,14 @@ egg_groups = Monster,Water 1
 gender_ratio_m = 87.5
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:9,High Jump:1,Long Jump:1,Power:9,Fountain,Naturewalk:Grassland,Mountable:1
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 5'3",1.6m
+height_class = Medium
+weight = 188.5 lbs.,85.5kg
+weight_class = 4
+skills = Athletics:4d6+2,Acrobatics:1d6+2,Combat:4d6+2,Stealth:1d6+2,Perception:3d6+3,Focus:4d6+3
+level_moves = 4:Tail Whip, 7:Bubble, 10:Withdraw, 13:Water Gun, 16:Bite, 20:Rapid Spin, 24:Protect, 28:Water Pulse, 32:Aqua Tail, 39:Skull Bash, 46:Iron Defense, 53:Rain Dance, 60:Hydro Pump
 hm_moves = Surf,Strength,Waterfall,Dive
-tm_moves = 
+tm_moves = Roar, Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Smack Down, Earthquake, Return, Dig, Brick Break, Double Team, Rock Tomb, Facade, Rest, Attract, Round, Focus Blast, Scald, Fling, Giga Impact, Gyro Ball, Bulldoze, Rock Slide, Dragon Tail, Swagger, Sleep Talk, Substitute, Flash Cannon, Rock Smash, Dark Pulse, Power-Up Punch, Confide
 tutor_moves = Aqua Tail, Avalanche, Body Slam, Brine, Counter, Defense Curl, Dive, Double-Edge, Dynamic Punch, Flash Cannon(N), Focus Punch, Hydro Cannon, Ice Punch, Icy Wind, Iron Defense, Iron Tail, Mega Kick, Mega Punch, Mud-Slap, Outrage, Rollout, Seismic Toss, Signal Beam, Sleep Talk, Snore, Water Pledge, Zen Headbutt
 [Tododile]
 page = 51
