--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1665,14 +1665,14 @@ gender_ratio_m = 50
 average_hatch_rate_days = 7
 family = Fletchling,Fletchinder,Talonflame
 capabilities = Overland:3,Sky:5,High Jump:1,Long Jump:1,Power:1,Guster,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 1'00",0.3m
+height_class = Small
+weight = 3.7 lbs.,1.7 kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:3d6+2,Combat:2d6,Stealth:2d6,Perception:3d6+2,Focus:2d6
+level_moves = 1:Tackle, 1:Growl, 6:Quick Attack, 10:Peck, 13:Agility, 16:Flail, 21:Roost, 25:Razor Wind, 29:Natural Gift, 34:Flame Charge, 39:Acrobatics, 41:Me First, 46:Tailwind, 48:Steel Wing
 hm_moves = Fly
-tm_moves = 
+tm_moves = Toxic, Hidden Power, Sunny Day, Taunt, Protect, Roost, Frustration, Return, Double Team, Aerial Ace, Facade, Flame Charge, Rest, Attract, Thief, Round, Overheat, Steel Wing, Acrobatics, Swords Dance, Swagger, Sleep Talk, U-Turn, Substitute, Confide
 egg_moves = Quick Guard, Snatch, Tailwind
 tutor_moves = Heat Wave, Snatch, Snore, Tailwind
 [Fletchinder]
@@ -1696,14 +1696,14 @@ egg_groups = Flying
 gender_ratio_m = 50
 family = Fletchling,Fletchinder,Talonflame
 capabilities = Overland:3,Sky:7,High Jump:2,Long Jump:2,Power:2,Firestarter,Guster,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 2'04",0.7m
+height_class = Small
+weight = 35.3 lbs.,16.0 kg
+weight_class = 2
+skills = Athletics:3d6,Acrobatics:4d6+2,Combat:3d6,Stealth:2d6,Perception:4d6,Focus:3d6
+level_moves = 1:Tackle, 1:Growl, 6:Quick Attack, 10:Peck, 13:Agility, 16:Flail, 17:Ember, 25:Roost, 27:Razor Wind, 31:Natural Gift, 38:Flame Charge, 42:Acrobatics, 46:Me First, 51:Tailwind, 55:Steel Wing
 hm_moves = Fly
-tm_moves = 
+tm_moves = Toxic, Hidden Power, Sunny Day, Taunt, Protect, Roost, Frustration, Return, Double Team, Flamethrower, Fire Blast, Aerial Ace, Facade, Flame Charge, Rest, Attract, Thief, Round, Overheat, Steel Wing, Incinerate, Will-O-Wisp, Acrobatics, Swords Dance, Swagger, Sleep Talk, U-Turn, Substitute, Confide
 tutor_moves = Heat Wave, Snatch, Snore, Tailwind
 [Talonflame]
 page = 97
@@ -1725,14 +1725,14 @@ egg_groups = Flying
 gender_ratio_m = 50
 family = Fletchling,Fletchinder,Talonflame
 capabilities = Overland:4,Sky:8,High Jump:2,Long Jump:2,Power:4,Firestarter,Guster,Mountable:1
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 3'11",1.2m
+height_class = Medium
+weight = 54.0 lbs.,24.5 kg
+weight_class = 2
+skills = Athletics:4d6,Acrobatics:5d6+2,Combat:4d6,Stealth:2d6,Perception:4d6+2,Focus:3d6
+level_moves = 1:Tackle, 1:Growl, 6:Quick Attack, 10:Peck, 13:Agility, 16:Flail, 17:Ember, 25:Roost, 27:Razor Wind, 31:Natural Gift, 39:Flame Charge, 44:Acrobatics, 49:Me First, 55:Tailwind, 60:Steel Wing, 64:Brave Bird
 hm_moves = Fly
-tm_moves = 
+tm_moves = Toxic, Hidden Power, Sunny Day, Taunt, Hyper Beam, Protect, Roost, Frustration, Return, Double Team, Flamethrower, Fire Blast, Aerial Ace, Facade, Flame Charge, Rest, Attract, Thief, Round, Overheat, Steel Wing, Incinerate, Will-O-Wisp, Acrobatics, Giga Impact, Swords Dance, Swagger, Sleep Talk, U-Turn, Substitute, Confide
 tutor_moves = Brave Bird (N), Flare Blitz (N), Heat Wave, Snatch, Snore, Tailwind
 [Oddish]
 page = 125
