Added missing Oddish, Gloom, Vileplume, Bellossom data.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1756,14 +1756,14 @@ gender_ratio_m = 50
 average_hatch_rate_days = 10
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:4,Swim:2,Burrow:1,High Jump:1,Long Jump:1,Power:1,Naturewalk:Grassland,Naturewalk:Forest,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 1'8",0.5m
+height_class = Small
+weight = 11.9 lbs.,5.4kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:2d6,Combat:1d6+2,Stealth:4d6,Perception:2d6,Focus:2d6
+level_moves = 1:Absorb, 5:Sweet Scent, 9:Acid, 13:Poison Powder, 14:Stun Spore, 15:Sleep Powder, 19:Mega Drain, 23:Lucky Chant, 27:Moonlight, 31:Giga Drain, 35:Toxic, 39:Natural Gift, 43:Moonblast, 47:Grassy Terrain, 51:Petal Dance
 hm_moves = Cut
-tm_moves = 
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Protect, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Energy Ball, Flash, Swords Dance, Infestation, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power, Dazzling Gleam, Confide
 egg_moves = After You, Charm, Flail, Ingrain, Nature Power, Razor Leaf, Secret Power, Swords Dance,
 Synthesis, Teeter Dance, Tickle
 tutor_moves = After You, Bullet Seed, Double-Edge, Gastro Acid, Giga Drain, Nature Power, Secret Power, Seed Bomb, Sleep Talk, Snore, Synthesis, Worry Seed
@@ -1787,15 +1787,15 @@ habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
 gender_ratio_m = 50
 family = Oddish,Gloom,Vileplume,Bellossom
-capabilities = Overland:5,Swim:2,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+capabilities = Overland:5, Swim:2, High Jump:1, Long Jump:1, Power:2, Naturewalk:Grassland, Naturewalk:Forest, Underdog
+height = 2'7",0.8m
+height_class = Small
+weight = 19.0 lbs.,8.6kg
+weight_class = 1
+skills = Athletics:3d6,Acrobatics:2d6,Combat:2d6+1,Stealth:3d6,Perception:2d6,Focus:3d6+1
+level_moves = 5:Sweet Scent, 9:Acid, 13:Poison Powder, 14:Stun Spore, 15:Sleep Powder, 19:Mega Drain, 24:Lucky Chant, 29:Moonlight, 34:Giga Drain, 39:Toxic, 44:Natural Gift, 49:Petal Blizzard, 54:Grassy Terrain, 59:Petal Dance
 hm_moves = Cut
-tm_moves = 
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Protect, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Energy Ball, Fling, Flash, Swords Dance, Infestation, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power, Dazzling Gleam, Confide
 tutor_moves = After You, Bullet Seed, Double-Edge, Drain Punch, Gastro Acid, Giga Drain, Secret Power, Seed Bomb, Sleep Talk, Snore, Synthesis, Worry Seed
 [Vileplume]
 page = 127
@@ -1816,16 +1816,16 @@ habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
 gender_ratio_m = 50
 family = Oddish,Gloom,Vileplume,Bellossom
-capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+capabilities = Overland:5, Swim:3, High Jump:1, Long Jump:1, Power:2, Naturewalk:Grassland, Naturewalk:Forest
+height = 3'11",1.2m
+height_class = Medium
+weight = 41.0 lbs.,18.6kg
+weight_class = 2
+skills = Athletics:3d6+1,Acrobatics:2d6+1,Combat:3d6+3,Stealth:4d6,Perception:3d6,Focus:4d6+1
+level_moves = 5:Sweet Scent, 9:Acid, 13:Poison Powder, 14:Stun Spore, 15:Sleep Powder, 19:Mega Drain, 24:Lucky Chant, 29:Moonlight, 34:Giga Drain, 39:Toxic, 44:Natural Gift, 49:Petal Blizzard, 59:Petal Dance, 64:Solar Beam
 hm_moves = Cut
-tm_moves = 
-tutor_moves = Absorb, After You, Aromatherapy(N), Body Slam, Bullet Seed, Double-Edge, Drain Punch, Gastro Acid, Giga Drain, Mega Drain(N), Natural Gift, Poison Powder(N), Secret Power, Seed Bomb, Sleep Talk, Snore, Stun Spore(N), Synthesis, Worry Seed
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Energy Ball, Fling, Giga Impact, Flash, Swords Dance, Infestation, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power, Dazzling Gleam, Confide
+tutor_moves = Absorb, After You, Aromatherapy (N), Body Slam, Bullet Seed, Double-Edge, Drain Punch, Gastro Acid, Giga Drain, Mega Drain(N), Natural Gift, Poison Powder (N), Secret Power, Seed Bomb, Sleep Talk, Snore, Stun Spore (N), Synthesis, Worry Seed
 [Bellossom]
 page = 128
 legendary = False
@@ -1846,14 +1846,14 @@ egg_groups = Plant
 gender_ratio_m = 50
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Alluring,Naturewalk:Grassland,Naturewalk:Forest
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 1'4",0.4m
+height_class = Small
+weight = 12.8 lbs.,5.8kg
+weight_class = 1
+skills = Athletics:3d6+1,Acrobatics:4d6,Combat:2d6,Stealth:2d6,Perception:2d6,Focus:4d6+2
+level_moves = 5:Sweet Scent, 9:Acid, 13:Poison Powder, 14:Stun Spore, 15:Sleep Powder, 19:Mega Drain, 24:Magical Leaf, 29:Moonlight, 34:Giga Drain, 39:Toxic, 44:Natural Gift, 49:Petal Blizzard, 54:Grassy Terrain, 59:Petal Dance, 64:Leaf Storm
 hm_moves = Cut
-tm_moves = 
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Safeguard, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Energy Ball, Fling, Giga Impact, Flash, Swords Dance, Infestation, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power, Dazzling Gleam, Confide
 tutor_moves = Absorb, After You, Body Slam, Bullet Seed, Double-Edge, Gastro Acid, Giga Drain, Drain Punch, Leaf Blade(N), Mega Drain(N), Natural Gift, Petal Dance, Secret Power, Seed Bomb, Sleep Talk, Snore, Stun Spore(N), Sunny Day(N), Sweet Scent(N), Synthesis, Uproar, Worry Seed
 [Pichu]
 page = 144
