Data added for Bellossom, Pichu, Pikachu, Raichu, Eevee and all evolutions.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1845,7 +1845,7 @@ habitats = Marsh,Rainforest
 egg_groups = Plant
 gender_ratio_m = 50
 family = Oddish,Gloom,Vileplume,Bellossom
-capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Alluring,Naturewalk:Grassland,Naturewalk:Forest
+capabilities = Overland:5, Swim:3, High Jump:1, Long Jump:1, Power:2,Alluring, Naturewalk:Grassland, Naturewalk:Forest
 height = 1'4",0.4m
 height_class = Small
 weight = 12.8 lbs.,5.8kg
@@ -1876,14 +1876,14 @@ egg_groups = Field,Fairy
 gender_ratio_m = 50
 average_hatch_rate_days = 4
 family = Pichu,Pikachu,Raichu
-capabilities = Overland:3,Swim:1,High Jump:1,Long Jump:2,Power:1,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
-tm_moves = 
+capabilities = Overland:3, Swim:1, High Jump:1, Long Jump:2, Power:1, Zapper, Naturewalk:Forest, Naturewalk:Urban, Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 4.4 lbs.,2.0kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:3d6,Combat:1d6,Stealth:3d6+2,Perception:2d6,Focus:2d6+1
+level_moves = 1:Charm, 1:Thunder Shock, 5:Tail Whip, 10:Sweet Kiss, 13:Nasty Plot, 18:Thunder Wave
+tm_moves = Toxic, Hidden Power, Light Screen, Protect, Rain Dance, Frustration, Thunderbolt, Thunder, Return, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Fling, Charge Beam, Flash, Volt Switch, Thunder Wave, Grass Knot, Swagger, Sleep Talk, Substitute, Wild Charge
 egg_moves = Bestow, Bide, Charge, Disarming Voice, Double Slap, Encore, Endure, Fake Out, Flail, Lucky Chant, Present, Reversal, Thunder Punch, Tickle, Volt Tackle, Wish
 tutor_moves = Body Slam, Counter, Covet, Defense Curl, Double-Edge, Helping Hand, Hold Hands, Iron Tail, Magnet Rise, Mega Kick, Mega Punch, Mud-Slap, Rollout, Seismic Toss, Shock Wave, Signal Beam, Sleep Talk, Snore, Swift, Uproar
 [Pikachu]
@@ -1907,14 +1907,14 @@ egg_groups = Field,Fairy
 gender_ratio_m = 50
 family = Pichu,Pikachu,Raichu
 capabilities = Overland:7,Swim:2,High Jump:2,Long Jump:2,Power:2,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 1'4",0.4m
+height_class = Small
+weight = 13.2 lbs.,6.0kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:3d6+1, Combat:2d6, Stealth:3d6+1, Perception:2d6+1, Focus:3d6+2
+level_moves = 5:Tail Whip, 7:Play Nice, 10:Quick Attack, 13:Electro Ball, 18:Thunder Wave, 21:Feint, 23:Double Team, 26:Spark, 29:Nuzzle, 34:Discharge, 37:Slam, 42:Thunderbolt, 45:Agility, 50:Wild Charge, 53:Light Screen, 58:Thunder
 hm_moves = Strength
-tm_moves = 
+tm_moves = Toxic, Hidden Power, Light Screen, Protect, Rain Dance, Frustration, Thunderbolt, Thunder, Return, Dig, Brick Break, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Fling, Charge Beam, Flash, Volt Switch, Thunder Wave, Grass Knot, Swagger, Sleep Talk, Substitute, Wild Charge, Rock Smash
 tutor_moves = Body Slam, Counter, Covet, Defense Curl, Double-Edge, Dynamic Punch, Focus Punch, Helping Hand, Hold Hands, Iron Tail, Knock Off, Magnet Rise, Mega Kick, Mega Punch, Mud-Slap, Rollout, Seismic Toss, Shock Wave, Signal Beam, Sleep Talk, Snore, Swift, Thunder Punch, Uproar
 [Raichu]
 page = 146
@@ -1936,15 +1936,14 @@ egg_groups = Field,Fairy
 gender_ratio_m = 50
 family = Pichu,Pikachu,Raichu
 capabilities = Overland:6,Swim:3,High Jump:2,Long Jump:2,Power:4,Zapper,Naturewalk:Forest,Naturewalk:Urban
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 2'7", 0.8m
+height_class = Small
+weight = 66.1 lbs.,30.0kg
+weight_class = 3
+skills = Athletics:4d6+1, Acrobatics:2d6+1, Combat:4d6, Stealth:3d6, Perception:2d6+1, Focus:4d6+3
+level_moves = 5:Tail Whip, 7:Play Nice, 10:Quick Attack, 13:Electro Ball, 18:Thunder Wave, 21:Feint, 23:Double Team, 26:Spark, 29:Nuzzle, 34:Discharge, 37:Slam, 42:Thunderbolt, 45:Agility, 50:Wild Charge, 53:Light Screen, 58:Thunder
 hm_moves = Strength
-tm_moves = 
-egg_moves = 
+tm_moves = Toxic, Hidden Power, Hyper Beam, Light Screen, Protect, Rain Dance, Frustration, Thunderbolt, Thunder, Return, Dig, Brick Break, Double Team, Facade, Rest, Attract, Thief, Round, Echoed Voice, Focus Blast, Fling, Charge Beam, Giga Impact, Flash, Volt Switch, Thunder Wave, Grass Knot, Swagger, Sleep Talk, Substitute, Wild Charge, Rock Smash
 tutor_moves = Body Slam, Counter, Covet, Defense Curl, Double-Edge, Dynamic Punch, Focus Punch, Helping Hand, Iron Tail, Knock Off, Magnet Rise, Mega Kick, Mega Punch, Mud-Slap, Rollout, Seismic Toss, Shock Wave, Signal Beam, Sleep Talk, Snore, Swift, Thunderbolt(N), Thunder Punch, Thunder Shock, Uproar
 [Ditto]
 page = 629
@@ -1966,12 +1965,12 @@ egg_groups = Ditto
 gender_ratio_m = No Gender
 average_hatch_rate_days = 10
 family = Ditto
-capabilities = Overland:4,Swim:4,High Jump:1,Long Jump:1,Power:1,Amorphous,Wallclimber,Shapeshifter,Underdog
+capabilities = Overland:4, Swim:4, High Jump:1, Long Jump:1, Power:1, Amorphous, Wallclimber, Shapeshifter, Underdog
 height = 1'0",0.3m
 height_class = Small
 weight = 8.lbs.,4.0kg
 weight_class = 1
-skills = Athletics:2d6,Acrobatics:2d6,Combat:2d6,Stealth:4d6+2,Perception:3d6,Focus:3d6
+skills = Athletics:2d6, Acrobatics:2d6, Combat:2d6, Stealth:4d6+2, Perception:3d6, Focus:3d6
 level_moves = 1:Transform
 [Unown]
 page = 630
@@ -1988,17 +1987,17 @@ advanced_abilities = Perception,Anticipation
 high_ability = Keen Eye
 minimum_level = 1
 diets = Nullivore
-habitats = Cave,Urban
+habitats = Cave, Urban
 egg_groups = Indeterminate
 gender_ratio_m = No Gender
 average_hatch_rate_days = 25
 family = Unown
-capabilities = Levitate:4,Swim:2,High Jump:1,Long Jump:1,Power:1,Invisibility,Telekinetic,Underdog,Gather Unown
+capabilities = Levitate:4, Swim:2, High Jump:1, Long Jump:1, Power:1, Invisibility, Telekinetic, Underdog, Gather Unown
 height = 1'8",0.5m
 height_class = Small
 weight = lbs.,5.0kg
 weight_class = 1
-skills = Athletics:1d6+2,Acrobatics:2d6,Combat:2d6,Stealth:3d6+1,Perception:5d6,Focus:3d6
+skills = Athletics:1d6+2, Acrobatics:2d6, Combat:2d6, Stealth:3d6+1, Perception:5d6, Focus:3d6
 level_moves = 1:Hidden Power
 [Eevee]
 page = 631
@@ -2022,14 +2021,13 @@ gender_ratio_m = 87.5
 average_hatch_rate_days = 20
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:4,High Jump:1,Long Jump:1,Power:2,Tracker,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
-hm_moves = 
-tm_moves = 
+height = 1'0",0.3m
+height_class = Small
+weight = 14.3 lbs.,6.5kg
+weight_class = 1
+skills = Athletics:3d6+2, Acrobatics:2d6+1, Combat:2d6, Stealth:2d6+1, Perception:2d6+1, Focus:2d6
+level_moves = 1:Helping Hand, 1:Growl, 1:Tackle, 1:Tail Whip, 5:Sand Attack, 9:Baby-Doll Eyes, 13:Quick Attack, 17:Bite, 21:Covet, 25:Take Down, 29:Charm, 33:Baton Pass, 37:Double-Edge, 41:Last Resort, 45:Trump Card
+tm_moves = Toxic, Hidden Power, Sunny Day, Protect, Rain Dance, Frustration, Return, Dig, Shadow Ball, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Retaliate, Swagger, Sleep Talk, Substitute
 egg_moves = Captivate, Charm, Covet, Curse, Detect, Endure, Fake Tears, Flail, Natural Gift, Stored Power,
 Synchronoise, Tickle, Wish, Yawn
 tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Mud-Slap, Sleep Talk, Snore, Swift, Work Up
@@ -2052,15 +2050,15 @@ habitats = Forest,Freshwater
 egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
-capabilities = Overland:5,Swim:8,High Jump:1,Long Jump:2,Power:3,Amorphous,Gilled,Fountain,Tracker
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+capabilities = Overland:5, Swim:8, High Jump:1, Long Jump:2, Power:3, Amorphous, Gilled, Fountain, Tracker
+height = 3'3",1.0m
+height_class = Medium
+weight = 63.9 lbs.,29.0kg
+weight_class = 3
+skills = Athletics:5d6+2, Acrobatics:3d6+1, Combat:3d6+2, Stealth:3d6+2, Perception:3d6+2, Focus:3d6+2
+level_moves = 5:Sand Attack, 9:Water Gun, 13:Quick Attack, 17:Water Pulse, 21:Aurora Beam, 25:Aqua Ring, 29:Acid Armor, 33:Haze, 37:Muddy Water, 41:Last Resort, 45:Hydro Pump
 hm_moves = Surf,Strength,Waterfall,Dive
-tm_moves = 
+tm_moves = Roar, Toxic, Hail, Hidden Power, Sunny Day, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Return, Dig, Shadow Ball, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Scald, Retaliate, Giga Impact, Swagger, Sleep Talk, Substitute, Rock Smash
 tutor_moves = Aqua Tail, Body Slam, Brine, Covet, Dive, Double-Edge, Heal Bell, Helping Hand, Hyper Voice, Icy Wind, Last Resort, Mud-Slap, Signal Beam, Sleep Talk, Snore, Swift, Water Pulse, Work Up
 [Jolteon]
 page = 633
@@ -2082,14 +2080,14 @@ egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:10,Swim:5,High Jump:2,Long Jump:3,Power:3,Tracker,Zapper
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 2'7",0.8m
+height_class = Medium
+weight = 54.0 lbs.,24.5kg
+weight_class = 2
+skills = Athletics:4d6+2, Acrobatics:5d6+2, Combat:3d6+2, Stealth:4d6+2, Perception:3d6, Focus:3d6
+level_moves = 5:Sand Attack, 9:Thunder Shock, 13:Quick Attack, 17:Double Kick, 21:Thunder Fang, 25:Pin Missile, 29:Agility, 33:Thunder Wave, 37:Discharge, 41:Last Resort, 45:Thunder
 hm_moves = Strength
-tm_moves = 
+tm_moves = Roar, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Rain Dance, Frustration, Thunderbolt, Thunder, Return, Dig, Shadow Ball, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Charge Beam, Retaliate, Giga Impact, Flash, Volt Switch, Thunder Wave, Swagger, Sleep Talk, Substitute, Wild Charge, Rock Smash
 tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Magnet Rise, Mud-Slap, Shock Wave, Signal Beam, Sleep Talk, Snore, Swift, Work Up
 [Flareon]
 page = 634
@@ -2111,14 +2109,14 @@ egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:7,Swim:3,High Jump:1,Long Jump:2,Power:3,Egg Warmer,Firestarter,Tracker
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 2'11",0.9m
+height_class = Medium
+weight = 55.1 lbs.,25.0kg
+weight_class = 3
+skills = Athletics:5d6+2, Acrobatics:3d6+1, Combat:4d6+1, Stealth:3d6+2, Perception:4d6+2, Focus:3d6+2
+level_moves = 5:Sand Attack, 9:Ember, 13:Quick Attack, 17:Bite, 21:Fire Fang, 25:Fire Spin, 29:Scary Face, 33:Smog, 37:Lava Plume, 41:Last Resort, 45:Flare Blitz
 hm_moves = Strength
-tm_moves = 
+tm_moves = Roar, Toxic, Hidden Power, Sunny Day, Hyper Beam, Protect, Rain Dance, Frustration, Return, Dig, Shadow Ball, Double Team, Flamethrower, Fire Blast, Facade, Flame Charge, Rest, Attract, Round, Echoed Voice, Overheat, Incinerate, Will-O-Wisp, Retaliate, Giga Impact, Swagger, Sleep Talk, Substitute, Rock Smash
 tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Heat Wave, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Leer, Mud-Slap, Sleep Talk, Snore,
 Superpower, Swift, Work Up
 [Espeon]
@@ -2141,14 +2139,14 @@ egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Telepath,Telekinetic,Tracker,Premonition
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 2'11",0.9m
+height_class = Medium
+weight = 58.4 lbs. / 26.5kg
+weight_class = 3
+skills = Athletics:4d6+2, Acrobatics:3d6+1, Combat:3d6, Stealth:3d6+1, Perception:4d6+2, Focus:5d6+3
+level_moves = 5:Sand Attack, 9:Confusion, 13:Quick Attack, 17:Swift, 21:Psybeam, 25:Future Sight, 29:Psych Up, 33:Morning Sun, 37:Psychic, 41:Last Resort, 45:Power Swap
 hm_moves = Cut
-tm_moves = 
+tm_moves = Psyshock, Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Rain Dance, Frustration, Return, Dig, Psychic, Shadow Ball, Double Team, Reflect, Facade, Rest, Attract, Round, Echoed Voice, Retaliate, Giga Impact, Flash, Psych Up, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Trick Room, Dazzling Gleam, Confide
 tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Magic Coat, Magic Room, Mud-Slap, Role Play, Signal Beam, Skill Swap, Sleep Talk, Snore, Swift, Telekinesis, Trick, Work Up, Zen Headbutt
 [Umbreon]
 page = 636
@@ -2170,14 +2168,14 @@ egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Darkvision,Tracker,Stealth
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+height = 3'3",1.0m
+height_class = Medium
+weight = 59.5 lbs.,27.0kg
+weight_class = 3
+skills = Athletics:4d6+2, Acrobatics:3d6+1, Combat:3d6+3, Stealth:5d6+2, Perception:3d6+2, Focus:4d6+2
+level_moves = 5:Sand Attack, 9:Pursuit, 13:Quick Attack, 17:Confuse Ray, 21:Feint Attack, 25:Assurance, 29:Screech, 33:Moonlight, 37:Mean Look, 41:Last Resort, 45:Guard Swap
 hm_moves = Cut
-tm_moves = 
+tm_moves = Toxic, Hidden Power, Sunny Day, Taunt, Hyper Beam, Protect, Rain Dance, Frustration, Return, Dig, Psychic, Shadow Ball, Double Team, Torment, Facade, Rest, Attract, Round, Echoed Voice, Payback, Retaliate, Giga Impact, Flash, Psych Up, Dream Eater, Swagger, Sleep Talk, Substitute, Snarl, Dark Pulse
 tutor_moves = Body Slam, Covet, Dark Pulse, Double-Edge, Foul Play, Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Mud-Slap, Role Play, Sleep Talk, Snatch, Snore, Spite, Sucker Punch, Swift, Wonder Room, Work Up
 [Leafeon]
 page = 637
@@ -2198,15 +2196,15 @@ habitats = Forest,Grassland,Rainforest
 egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
-capabilities = Overland:7,Swim:4,High Jump:1,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Tracker
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+capabilities = Overland:7, Swim:4, High Jump:1, Long Jump:2, Power:3, Naturewalk:Grassland, Naturewalk:Forest, Tracker
+height = 3'3",1.0m
+height_class = Medium
+weight = 56.2 lbs.,25.5kg
+weight_class = 3
+skills = Athletics:4d6+2, Acrobatics:3d6+1, Combat:3d6+2, Stealth:4d6+2, Perception:4d6+2, Focus:3d6+2
+level_moves = 5:Sand Attack, 9:Razor Leaf, 13:Quick Attack, 17:Grass Whistle, 21:Magical Leaf, 25:Giga Drain, 29:Swords Dance, 33:Synthesis, 37:Sunny Day, 41:Last Resort, 45:Leaf Blade
 hm_moves = Strength
-tm_moves = 
+tm_moves = Roar, Toxic, Hidden Power, Sunny Day, Hyper Beam, Protect, Rain Dance, Frustration, Solar Beam, Return, Dig, Shadow Ball, Double Team, Aerial Ace, Facade, Rest, Attract, Round, Echoed Voice, Energy Ball, Retaliate, Giga Impact, Flash, Swords Dance, X-Scissor, Grass Knot, Swagger, Sleep Talk, Substitute, Rock Smash, Nature Power
 tutor_moves = Bullet Seed, Covet, Fury Cutter, Giga Drain, Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Knock Off, Last Resort, Mud-Slap, Seed Bomb, Sleep Talk, Snore, Swift, Synthesis, Work Up, Worry Seed
 [Glaceon]
 page = 638
@@ -2227,15 +2225,15 @@ habitats = Taiga,Tundra
 egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
-capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Freezer,Naturewalk:Tundra,Tracker
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
+capabilities = Overland:6, Swim:4, High Jump:1, Long Jump:2, Power:3, Freezer, Naturewalk:Tundra, Tracker
+height = 2'7",0.8m
+height_class = Medium
+weight = 57.1 lbs.,25.9kg
+weight_class = 3
+skills = Athletics:5d6+2, Acrobatics:3d6+1, Combat:3d6+2, Stealth:3d6+2, Perception:3d6+2, Focus:4d6+2
+level_moves = 5:Sand Attack, 9:Icy Wind, 13:Quick Attack, 17:Bite, 21:Ice Fang, 25:Ice Shard, 29:Barrier, 33:Mirror Coat, 37:Hail, 41:Last Resort, 45:Blizzard
 hm_moves = Strength
-tm_moves = 
+tm_moves = Roar, Toxic, Hail, Hidden Power, Sunny Day, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Return, Dig, Shadow Ball, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Retaliate, Giga Impact, Frost Breath, Swagger, Sleep Talk, Substitute, Rock Smash
 tutor_moves = Aqua Tail, Avalanche, Covet, Heal Bell,
 Helping Hand, Hyper Voice, Icy Wind, Iron Tail, Last Resort, Mud-Slap, Signal Beam, Sleep Talk, Snore, Swift, Work Up
 [Sylveon]
@@ -2258,13 +2256,13 @@ egg_groups = Field
 gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Tracker
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
-level_moves = 
-tm_moves = 
+height = 3'03",1.0m
+height_class = Medium
+weight = 51.8 lbs.,23.5kg
+weight_class = 2
+skills = Athletics:3d6+2, Acrobatics:3d6+1, Combat:3d6+1, Stealth:3d6+2, Perception:5d6+2, Focus:5d6+2
+level_moves = 1:Tackle, 1:Tail Whip, 1:Helping Hand, 5:Sand Attack, 9:Fairy Wind, 13:Quick Attack, 17:Swift, 20:Draining Kiss, 25:Skill Swap, 29:Misty Terrain, 33:Light Screen, 37:Moonblast, 41:Last Resort, 45:Psych Up
+tm_moves = Psyshock, Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Rain Dance, Safeguard, Frustration, Return, Dig, Shadow Ball, Double Team, Reflect, Facade, Rest, Attract, Round, Echoed Voice, Retaliate, Giga Impact, Flash, Psych Up, Swagger, Sleep Talk, Substitute, Dazzling Gleam, Confide
 tutor_moves = Covet, Disarming Voice (N), Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Magic Coat, Skill Swap, Snore
 ; [DEFAULT]
 ; page = 
@@ -2292,7 +2290,7 @@ tutor_moves = Covet, Disarming Voice (N), Heal Bell, Helping Hand, Hyper Voice, 
 ; height_class = 
 ; weight = 
 ; weight_class = 
-; skills = Athletics:,Acrobatics:,Combat:,Stealth:,Perception:,Focus:
+; skills = Athletics:, Acrobatics:, Combat:, Stealth:, Perception:, Focus:
 ; level_moves = 
 ; hm_moves = 
 ; tm_moves = 
