--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1614,6 +1614,92 @@ level_moves = 1:Pound, 1:Growl, 5:Bubble, 8:Quick Attack, 10:Lick, 14:Water Puls
 hm_moves = Cut,Surf,Strength,Waterfall
 tm_moves = Toxic, Hidden Power, Taunt, Ice Beam, Blizzard, Protect, Rain Dance, Frustration, Smack Down, Return, Dig, Double Team, Rock Tomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, Echoed Voice, Scald, Fling, Acrobatics, Rock Slide, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Dark Pulse, Power-Up Punch, Confide
 tutor_moves = Bounce, Gunk Shot, Ice Punch, Icy Wind, Low Kick, Role Play, Snatch, Snore, Spite, Water Pledge, Water Pulse
+[Caterpie]
+page = 66
+legendary = False
+base_hp = 5
+base_attack = 3
+base_defense = 4
+base_special_attack = 2
+base_special_defense = 2
+base_speed = 5
+types = Bug
+basic_abilities = Shield Dust, Run Away
+advanced_abilities = Silk Threads, Stench
+high_ability = Suction Cups
+evolutions = Metapod,5
+minimum_level = 1
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+average_hatch_rate_days = 7
+family = Caterpie, Metapod, Butterfree
+capabilities = Overland:5, Swim:2, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Wallclimber, Threaded, Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 6.4 lbs.,2.9kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:1d6, Combat:2d6, Stealth:2d6, Perception:2d6, Focus:3d6
+level_moves = 1:String Shot, 1:Tackle, 15:Bug Bite
+tutor_moves = Bug Bite, Electroweb, Snore, Bug Bite, String Shot
+[Metapod]
+page = 67
+legendary = False
+base_hp = 5
+base_attack = 2
+base_defense = 6
+base_special_attack = 3
+base_special_defense = 3
+base_speed = 3
+types = Bug
+basic_abilities = Shed Skin, Battle Armor
+advanced_abilities = Silk Threads, Magic Guard
+high_ability = Sturdy
+evolutions = Butterfree,10
+minimum_level = 5
+diets = Nullivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Caterpie, Metapod, Butterfree
+capabilities = Overland:2, Swim:2, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Underdog
+height = 2'4",0.7m
+height_class = Small
+weight = 21.8 lbs.,9.9kg
+weight_class = 1
+skills = Athletics:1d6, Acrobatics:1d6, Combat:2d6, Stealth:2d6, Perception:2d6, Focus:3d6
+level_moves = 7:Harden
+tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot, Tackle
+[Butterfree]
+page = 68
+legendary = False
+base_hp = 6
+base_attack = 5
+base_defense = 5
+base_special_attack = 9
+base_special_defense = 8
+base_speed = 7
+types = Bug, Flying
+basic_abilities = Compound Eyes, Tinted Lens
+advanced_abilities = Keen Eye, Flutter
+high_ability = Blow Away
+minimum_level = 10
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+average_hatch_rate_days = 
+family = Caterpie, Metapod, Butterfree
+capabilities = Overland:3, Sky:8, Swim:2, High Jump:1, Long Jump:1, Power:2, Naturewalk:Grassland, Naturewalk:Forest, Wallclimber, Threaded, Underdog
+height = 3'7",1.1m
+height_class = Medium
+weight = 70.5 lbs.,32.0kg
+weight_class = 3
+skills = Athletics:3d6, Acrobatics:3d6, Combat:2d6, Stealth:2d6, Perception:6d6+3, Focus:5d6
+level_moves = 10:Confusion, 12:Poison Powder, 12:Sleep Powder, 12:Stun Spore, 16:Gust, 18:Supersonic, 22:Whirlwind, 24:Psybeam, 28:Silver Wind, 30:Tailwind, 34:Rage Powder, 36:Safeguard, 40:Captivate, 42:Bug Buzz, 46:Quiver Dance
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Rain Dance, Roost, Safeguard, Frustration, Solar Beam, Return, Psychic, Shadow Ball, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Psych Up, Infestation, Dream Eater, Swagger, Sleep Talk, U-Turn, Substitute
+tutor_moves = Air Cutter, Bug Bite, Double-Edge, Electroweb, Giga Drain, Ominous Wind, Roost, Signal Beam, Skill Swap, Sleep Talk, Snore, String Shot, Swift, Tailwind, Twister
 [Greninja]
 page = 65
 legendary = False
