--- a/pokemon.ini
+++ b/pokemon.ini
@@ -851,8 +851,7 @@ level_moves = 1:Leer, 1:Scratch, 7:Ember, 9:Taunt, 15:Fury Swipes, 17:Flame Whee
 hm_moves = Cut,Strength
 tm_moves = Hone Claws, Toxic, Bulk Up, Hidden Power, Sunny Day, Taunt, Protect, Frustration, Return, Dig, Brick Break, Double Team, Flamethrower, Fire Blast, Aerial Ace, Torment, Facade, Flame Charge, Rest, Attract, Low Sweep, Round, Overheat, Fling, Incinerate, Will-O-Wisp, Acrobatics, Shadow Claw, Swords Dance, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Power-Up Punch, Confide
 egg_moves = Assist, Blaze Kick, Counter, Double Kick, Encore, Fake Out, Quick Guard, Fire Punch, Focus Energy, Focus Punch, Heat Wave, Helping Hand, Submission, Thunder Punch
-tutor_moves = Covet, Endeavor, Fire Pledge, Fire Punch, Gunk Shot, Heat Wave, Helping Hand, Iron Tail, Low Kick, Magic Coat, Mud-Slap, Rock Climb, Role Play, Rollout, Sleep Talk, Snore, Stealth Rock, Swift,
-Thunder Punch, Uproar, Vacuum Wave
+tutor_moves = Covet, Endeavor, Fire Pledge, Fire Punch, Gunk Shot, Heat Wave, Helping Hand, Iron Tail, Low Kick, Magic Coat, Mud-Slap, Rock Climb, Role Play, Rollout, Sleep Talk, Snore, Stealth Rock, Swift, Thunder Punch, Uproar, Vacuum Wave
 [Monferno]
 page = 40
 legendary = False
@@ -943,8 +942,7 @@ level_moves = 1:Tackle, 3:Tail Whip, 7:Ember, 9:Odor Sleuth, 13:Defense Curl, 15
 hm_moves = Strength
 tm_moves = Roar, Toxic, Hidden Power, Sunny Day, Taunt, Protect, Frustration, Solar Beam, Return, Double Team, Flamethrower, Fire Blast, Rock Tomb, Facade, Flame Charge, Rest, Attract, Round, Echoed Voice, Overheat, Incinerate, Will-O-Wisp, Gyro Ball, Grass Knot, Swagger, Sleep Talk, Substitute, Wild Charge, Rock Smash
 egg_moves = Body Slam, Covet, Curse, Endeavor, Heavy Slam, Magnitude, Sleep Talk, Sucker Punch, Superpower, Thrash, Yawn
-tutor_moves = Covet, Endeavor, Fire Pledge, Heat Wave, Helping Hand, Iron Tail, Sleep Talk, Snore,
-Superpower
+tutor_moves = Covet, Endeavor, Fire Pledge, Heat Wave, Helping Hand, Iron Tail, Sleep Talk, Snore, Superpower
 [Pignite]
 page = 43
 legendary = False
@@ -1398,8 +1396,7 @@ skills = Athletics:2d6,Acrobatics:3d6+2,Combat:2d6,Stealth:3d6+2,Perception:2d6,
 level_moves = 1:Pound, 4:Growl, 8:Bubble, 11:Water Sport, 15:Peck, 19:Bubble Beam, 24:Bide, 28:Fury Attack, 33:Brine, 37:Whirlpool, 42:Mist, 46:Drill Peck, 51:Hydro Pump
 hm_moves = Cut,Surf,Waterfall,Dive
 tm_moves = Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Protect, Rain Dance, Frustration, Return, Dig, Brick Break, Double Team, Rock Tomb, Aerial Ace, Facade, Rest, Attract, Round, Echoed Voice, Scald, Fling, Quash, Grass Knot, Swagger, Sleep Talk, Substitute
-egg_moves = Agility, Aqua Ring, Bide, Double Hit, Flail, Hydro Pump, Mud Sport, Mud-Slap, Snore,
-Supersonic, Yawn
+egg_moves = Agility, Aqua Ring, Bide, Double Hit, Flail, Hydro Pump, Mud Sport, Mud-Slap, Snore, Supersonic, Yawn
 tutor_moves = Covet, Dive, Icy Wind, Mud-Slap, Pluck, Signal Beam, Sleep Talk, Snore, Stealth Rock, Water Pledge, Water Pulse
 [Prinplup]
 page = 58
@@ -1459,8 +1456,7 @@ skills = Athletics:4d6+2,Acrobatics:4d6+2,Combat:4d6,Stealth:2d6,Perception:4d6,
 level_moves = 4:Growl, 8:Bubble, 11:Swords Dance, 15:Peck, 16:Metal Claw, 19:Bubble Beam, 24:Swagger, 28:Fury Attack, 33:Brine, 36:Aqua Jet, 39:Whirlpool, 46:Mist, 52:Drill Peck, 59:Hydro Pump
 hm_moves = Cut,Surf,Strength,Waterfall,Dive
 tm_moves = Hone Claws, Roar, Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Earthquake, Return, Dig, Brick Break, Double Team, Rock Tomb, Aerial Ace, Facade, Rest, Attract, Round, Echoed Voice, Steel Wing, Scald, Fling, Quash, Shadow Claw, Giga Impact, Swords Dance, Bulldoze, Rock Slide, Grass Knot, Swagger, Sleep Talk, Substitute, Flash Cannon, Rock Smash
-tutor_moves = Avalanche, Covet, Dive, Fury Cutter, Hydro Cannon, Icy Wind, Iron Defense, Knock Off,
-Mud-Slap, Pluck, Rock Climb, Signal Beam, Sleep Talk, Snore, Stealth Rock, Steel Wing, Water Pledge, Water Pulse
+tutor_moves = Avalanche, Covet, Dive, Fury Cutter, Hydro Cannon, Icy Wind, Iron Defense, Knock Off, Mud-Slap, Pluck, Rock Climb, Signal Beam, Sleep Talk, Snore, Stealth Rock, Steel Wing, Water Pledge, Water Pulse
 [Oshawott]
 page = 60
 legendary = False
@@ -1614,6 +1610,35 @@ level_moves = 1:Pound, 1:Growl, 5:Bubble, 8:Quick Attack, 10:Lick, 14:Water Puls
 hm_moves = Cut,Surf,Strength,Waterfall
 tm_moves = Toxic, Hidden Power, Taunt, Ice Beam, Blizzard, Protect, Rain Dance, Frustration, Smack Down, Return, Dig, Double Team, Rock Tomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, Echoed Voice, Scald, Fling, Acrobatics, Rock Slide, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Dark Pulse, Power-Up Punch, Confide
 tutor_moves = Bounce, Gunk Shot, Ice Punch, Icy Wind, Low Kick, Role Play, Snatch, Snore, Spite, Water Pledge, Water Pulse
+[Greninja]
+page = 65
+legendary = False
+base_hp = 7
+base_attack = 10
+base_defense = 7
+base_special_attack = 10
+base_special_defense = 7
+base_speed = 12
+types = Water, Dark
+basic_abilities = Mud Dweller, Torrent
+advanced_abilities = Protean, Hydration
+high_ability = Wash Away
+minimum_level = 30
+diets = Herbivore
+habitats = Freshwater, Marsh
+egg_groups = Water 1
+gender_ratio_m = 87.5
+family = Froakie, Frogadier, Greninja
+capabilities = Overland:8, Swim:8, High Jump:3, Long Jump:3, Power:3, Fountain, Gilled, Stealth, Wallclimber, Naturewalk:Wetlands
+height = 4'11",1.5m
+height_class = Medium
+weight = 88.2 lbs.,40.0kg
+weight_class = 3
+skills = Athletics:4d6,Acrobatics:6d6+2,Combat:4d6,Stealth:5d6+1,Perception:3d6+1,Focus:3d6
+level_moves = 1:Pound, 1:Growl, 5:Bubble, 8:Quick Attack, 10:Lick, 14:Water Pulse, 20:Smokescreen, 23:Shadow Sneak, 28:Spikes, 30:Water Shuriken, 33:Feint Attack, 43:Substitute, 49:Extrasensory, 52:Double Team, 56:Haze, 60:Hydro Pump, 70:Night Slash
+hm_moves = Cut,Surf,Strength,Waterfall
+tm_moves = Toxic, Hidden Power, Taunt, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Smack Down, Return, Dig, Double Team, Rock Tomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, Echoed Voice, Scald, Fling, Acrobatics, Giga Impact, Rock Slide, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Dark Pulse, Power-Up Punch, Confide
+tutor_moves = Bounce, Gunk Shot, Hydro Cannon, Ice Punch, Icy Wind, Low Kick, Mat Block (N), Night Slash (N), Role Play (N), Snatch, Snore, Spite, Water Pledge, Water Pulse
 [Caterpie]
 page = 66
 legendary = False
@@ -1700,35 +1725,6 @@ skills = Athletics:3d6, Acrobatics:3d6, Combat:2d6, Stealth:2d6, Perception:6d6+
 level_moves = 10:Confusion, 12:Poison Powder, 12:Sleep Powder, 12:Stun Spore, 16:Gust, 18:Supersonic, 22:Whirlwind, 24:Psybeam, 28:Silver Wind, 30:Tailwind, 34:Rage Powder, 36:Safeguard, 40:Captivate, 42:Bug Buzz, 46:Quiver Dance
 tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Rain Dance, Roost, Safeguard, Frustration, Solar Beam, Return, Psychic, Shadow Ball, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Psych Up, Infestation, Dream Eater, Swagger, Sleep Talk, U-Turn, Substitute
 tutor_moves = Air Cutter, Bug Bite, Double-Edge, Electroweb, Giga Drain, Ominous Wind, Roost, Signal Beam, Skill Swap, Sleep Talk, Snore, String Shot, Swift, Tailwind, Twister
-[Greninja]
-page = 65
-legendary = False
-base_hp = 7
-base_attack = 10
-base_defense = 7
-base_special_attack = 10
-base_special_defense = 7
-base_speed = 12
-types = Water, Dark
-basic_abilities = Mud Dweller, Torrent
-advanced_abilities = Protean, Hydration
-high_ability = Wash Away
-minimum_level = 30
-diets = Herbivore
-habitats = Freshwater, Marsh
-egg_groups = Water 1
-gender_ratio_m = 87.5
-family = Froakie, Frogadier, Greninja
-capabilities = Overland:8, Swim:8, High Jump:3, Long Jump:3, Power:3, Fountain, Gilled, Stealth, Wallclimber, Naturewalk:Wetlands
-height = 4'11",1.5m
-height_class = Medium
-weight = 88.2 lbs.,40.0kg
-weight_class = 3
-skills = Athletics:4d6,Acrobatics:6d6+2,Combat:4d6,Stealth:5d6+1,Perception:3d6+1,Focus:3d6
-level_moves = 1:Pound, 1:Growl, 5:Bubble, 8:Quick Attack, 10:Lick, 14:Water Pulse, 20:Smokescreen, 23:Shadow Sneak, 28:Spikes, 30:Water Shuriken, 33:Feint Attack, 43:Substitute, 49:Extrasensory, 52:Double Team, 56:Haze, 60:Hydro Pump, 70:Night Slash
-hm_moves = Cut,Surf,Strength,Waterfall
-tm_moves = Toxic, Hidden Power, Taunt, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Smack Down, Return, Dig, Double Team, Rock Tomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, Echoed Voice, Scald, Fling, Acrobatics, Giga Impact, Rock Slide, Grass Knot, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash, Dark Pulse, Power-Up Punch, Confide
-tutor_moves = Bounce, Gunk Shot, Hydro Cannon, Ice Punch, Icy Wind, Low Kick, Mat Block (N), Night Slash (N), Role Play (N), Snatch, Snore, Spite, Water Pledge, Water Pulse
 [Fletchling]
 page = 95
 legendary = False
@@ -1850,8 +1846,7 @@ skills = Athletics:2d6,Acrobatics:2d6,Combat:1d6+2,Stealth:4d6,Perception:2d6,Fo
 level_moves = 1:Absorb, 5:Sweet Scent, 9:Acid, 13:Poison Powder, 14:Stun Spore, 15:Sleep Powder, 19:Mega Drain, 23:Lucky Chant, 27:Moonlight, 31:Giga Drain, 35:Toxic, 39:Natural Gift, 43:Moonblast, 47:Grassy Terrain, 51:Petal Dance
 hm_moves = Cut
 tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Protect, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Energy Ball, Flash, Swords Dance, Infestation, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power, Dazzling Gleam, Confide
-egg_moves = After You, Charm, Flail, Ingrain, Nature Power, Razor Leaf, Secret Power, Swords Dance,
-Synthesis, Teeter Dance, Tickle
+egg_moves = After You, Charm, Flail, Ingrain, Nature Power, Razor Leaf, Secret Power, Swords Dance, Synthesis, Teeter Dance, Tickle
 tutor_moves = After You, Bullet Seed, Double-Edge, Gastro Acid, Giga Drain, Nature Power, Secret Power, Seed Bomb, Sleep Talk, Snore, Synthesis, Worry Seed
 [Gloom]
 page = 126
@@ -2114,8 +2109,7 @@ weight_class = 1
 skills = Athletics:3d6+2, Acrobatics:2d6+1, Combat:2d6, Stealth:2d6+1, Perception:2d6+1, Focus:2d6
 level_moves = 1:Helping Hand, 1:Growl, 1:Tackle, 1:Tail Whip, 5:Sand Attack, 9:Baby-Doll Eyes, 13:Quick Attack, 17:Bite, 21:Covet, 25:Take Down, 29:Charm, 33:Baton Pass, 37:Double-Edge, 41:Last Resort, 45:Trump Card
 tm_moves = Toxic, Hidden Power, Sunny Day, Protect, Rain Dance, Frustration, Return, Dig, Shadow Ball, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Retaliate, Swagger, Sleep Talk, Substitute
-egg_moves = Captivate, Charm, Covet, Curse, Detect, Endure, Fake Tears, Flail, Natural Gift, Stored Power,
-Synchronoise, Tickle, Wish, Yawn
+egg_moves = Captivate, Charm, Covet, Curse, Detect, Endure, Fake Tears, Flail, Natural Gift, Stored Power, Synchronoise, Tickle, Wish, Yawn
 tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Mud-Slap, Sleep Talk, Snore, Swift, Work Up
 [Vaporeon]
 page = 632
@@ -2203,8 +2197,7 @@ skills = Athletics:5d6+2, Acrobatics:3d6+1, Combat:4d6+1, Stealth:3d6+2, Percept
 level_moves = 5:Sand Attack, 9:Ember, 13:Quick Attack, 17:Bite, 21:Fire Fang, 25:Fire Spin, 29:Scary Face, 33:Smog, 37:Lava Plume, 41:Last Resort, 45:Flare Blitz
 hm_moves = Strength
 tm_moves = Roar, Toxic, Hidden Power, Sunny Day, Hyper Beam, Protect, Rain Dance, Frustration, Return, Dig, Shadow Ball, Double Team, Flamethrower, Fire Blast, Facade, Flame Charge, Rest, Attract, Round, Echoed Voice, Overheat, Incinerate, Will-O-Wisp, Retaliate, Giga Impact, Swagger, Sleep Talk, Substitute, Rock Smash
-tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Heat Wave, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Leer, Mud-Slap, Sleep Talk, Snore,
-Superpower, Swift, Work Up
+tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Heat Wave, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Leer, Mud-Slap, Sleep Talk, Snore, Superpower, Swift, Work Up
 [Espeon]
 page = 635
 legendary = False
@@ -2320,8 +2313,7 @@ skills = Athletics:5d6+2, Acrobatics:3d6+1, Combat:3d6+2, Stealth:3d6+2, Percept
 level_moves = 5:Sand Attack, 9:Icy Wind, 13:Quick Attack, 17:Bite, 21:Ice Fang, 25:Ice Shard, 29:Barrier, 33:Mirror Coat, 37:Hail, 41:Last Resort, 45:Blizzard
 hm_moves = Strength
 tm_moves = Roar, Toxic, Hail, Hidden Power, Sunny Day, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Return, Dig, Shadow Ball, Double Team, Facade, Rest, Attract, Round, Echoed Voice, Retaliate, Giga Impact, Frost Breath, Swagger, Sleep Talk, Substitute, Rock Smash
-tutor_moves = Aqua Tail, Avalanche, Covet, Heal Bell,
-Helping Hand, Hyper Voice, Icy Wind, Iron Tail, Last Resort, Mud-Slap, Signal Beam, Sleep Talk, Snore, Swift, Work Up
+tutor_moves = Aqua Tail, Avalanche, Covet, Heal Bell, Helping Hand, Hyper Voice, Icy Wind, Iron Tail, Last Resort, Mud-Slap, Signal Beam, Sleep Talk, Snore, Swift, Work Up
 [Sylveon]
 page = 639
 legendary = False
