Fixed misplaced comma.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -59,7 +59,7 @@ height_class = Medium
 weight = 28.lbs.,13.0kg
 weight_class = 2
 skills = Athletics:4d6+3,Acrobatics:2d6,Combat:3d6,Stealth:2d6,Perception:2d6,Focus:3d6+3
-level_moves = 3:Growl,7,Leech Seed,9:Vine Whip,13:Poison Powder,13:Sleep Powder,15:Take Down,20:Razor Leaf,23:Sweet Scent,28:Growth,31:Double-Edge,36:Worry Seed,39:Synthesis,44:Solar Beam
+level_moves = 3:Growl,7:Leech Seed,9:Vine Whip,13:Poison Powder,13:Sleep Powder,15:Take Down,20:Razor Leaf,23:Sweet Scent,28:Growth,31:Double-Edge,36:Worry Seed,39:Synthesis,44:Solar Beam
 hm_moves = Cut,Strength
 tm_moves = Toxic,Venoshock,Hidden Power,Sunny Day,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Sludge Bomb,Facade,Rest,Attract,Round,Echoed Voice,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Confide
 tutor_moves = Bind,Body Slam,Bullet Seed,Defense Curl,Endure,Fury Cutter,Giga Drain,Grass Pledge,Knock Off,Leech Seed,Mud-Slap,Natural Gift,Secret Power,Seed Bomb,Sleep Talk,Snore,String Shot,Synthesis,Tackle,Worry Seed
