Added Weedle, Kakuna, Beedrill.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1725,6 +1725,92 @@ skills = Athletics:3d6, Acrobatics:3d6, Combat:2d6, Stealth:2d6, Perception:6d6+
 level_moves = 10:Confusion, 12:Poison Powder, 12:Sleep Powder, 12:Stun Spore, 16:Gust, 18:Supersonic, 22:Whirlwind, 24:Psybeam, 28:Silver Wind, 30:Tailwind, 34:Rage Powder, 36:Safeguard, 40:Captivate, 42:Bug Buzz, 46:Quiver Dance
 tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Rain Dance, Roost, Safeguard, Frustration, Solar Beam, Return, Psychic, Shadow Ball, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Psych Up, Infestation, Dream Eater, Swagger, Sleep Talk, U-Turn, Substitute
 tutor_moves = Air Cutter, Bug Bite, Double-Edge, Electroweb, Giga Drain, Ominous Wind, Roost, Signal Beam, Skill Swap, Sleep Talk, Snore, String Shot, Swift, Tailwind, Twister
+[Weedle]
+page = 69
+legendary = False
+base_hp = 4
+base_attack = 4
+base_defense = 3
+base_special_attack = 2
+base_special_defense = 2
+base_speed = 5
+types = Bug, Poison
+basic_abilities = Shield Dust, Run Away
+advanced_abilities = Silk Threads, Swarm
+high_ability = Poison Touch
+evolutions = Kakuna,5
+minimum_level = 1
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+average_hatch_rate_days = 7
+family = Weedle, Kakuna, Beedrill
+capabilities = Overland:5, Burrow:1, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Wallclimber, Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 7.1 lbs.,3.2kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:1d6, Combat:2d6, Stealth:3d6, Perception:2d6, Focus:2d6
+level_moves = 1:Poison Sting, 1:String Shot, 15:Bug Bite
+tutor_moves = Bug Bite, Electroweb, String Shot
+[Kakuna]
+page = 70
+legendary = False
+base_hp = 5
+base_attack = 3
+base_defense = 5
+base_special_attack = 3
+base_special_defense = 3
+base_speed = 4
+types = Bug, Poison
+basic_abilities = Shed Skin, Battle Armor
+advanced_abilities = Silk Threads, Magic Guard
+high_ability = Sturdy
+evolutions = Beedrill,10
+minimum_level = 5
+diets = Nullivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Weedle, Kakuna, Beedrill
+capabilities = Overland:2, Swim:2, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:forest, Threaded, Underdog
+height = 2'0",0.6m
+height_class = Small
+weight = 22 lbs.,10.0kg
+weight_class = 1
+skills = Athletics:1d6, Acrobatics:1d6, Combat:2d6, Stealth:2d6, Perception:2d6, Focus:3d6
+level_moves = 7:Harden
+tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot, Tackle
+[Beedrill]
+page = 71
+legendary = False
+base_hp = 7
+base_attack = 9
+base_defense = 4
+base_special_attack = 5
+base_special_defense = 8
+base_speed = 8
+types = Bug, Poison
+basic_abilities = Sniper, Poison Touch
+advanced_abilities = Technician, Swarm
+high_ability = Vanguard
+minimum_level = 10
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Weedle, Kakuna, Beedrill
+capabilities = Overland:2, Swim:2, Sky:8, High Jump:3, Long Jump:4, Power:4, Underdog
+height = 3'3",1.0m
+height_class = Medium
+weight = 65.0 lbs.,29.5kg
+weight_class = 3
+skills = Athletics:3d6+2, Acrobatics:5d6+3, Combat:4d6+1, Stealth:3d6+3, Perception:3d6+3, Focus:3d6+3
+level_moves = 10:Fury Attack, 13:Focus Energy, 16:Twineedle, 19:Rage, 22:Pursuit, 25:Toxic Spikes, 28:Pin Missile, 31:Agility, 34:Assurance, 37:Poison Jab, 40:Endeavor, 45:Fell Stinger
+hm_moves = Cut
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Roost, Frustration, Solar Beam, Return, Brick Break, Double Team, Sludge Bomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, False Swipe, Acrobatics, Payback, Giga Impact, Flash, Swords Dance, Struggle Bug, X-Scissor, Infestation, Poison Jab, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash
+tutor_moves = Air Cutter, Bug Bite, Double-Edge, Drill Run, Electroweb, Endeavor, Fury Cutter, Giga Drain, Knock Off, Ominous Wind, Roost, Silver Wind, Sleep Talk, Snore, String Shot, Swift, Tailwind
 [Fletchling]
 page = 95
 legendary = False
