--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1649,8 +1649,8 @@ base_special_attack = 2
 base_special_defense = 2
 base_speed = 5
 types = Bug
-basic_abilities = Shield Dust, Run Away
-advanced_abilities = Silk Threads, Stench
+basic_abilities = Shield Dust
+advanced_abilities = Silk Threads, Stench, Run Away
 high_ability = Suction Cups
 evolutions = Metapod,5
 minimum_level = 1
@@ -1678,8 +1678,8 @@ base_special_attack = 3
 base_special_defense = 3
 base_speed = 3
 types = Bug
-basic_abilities = Shed Skin, Battle Armor
-advanced_abilities = Silk Threads, Magic Guard
+basic_abilities = Shed Skin
+advanced_abilities = Silk Threads, Magic Guard, Battle Armor
 high_ability = Sturdy
 evolutions = Butterfree,10
 minimum_level = 5
@@ -1706,8 +1706,8 @@ base_special_attack = 9
 base_special_defense = 8
 base_speed = 7
 types = Bug, Flying
-basic_abilities = Compound Eyes, Tinted Lens
-advanced_abilities = Keen Eye, Flutter
+basic_abilities = Compound Eyes
+advanced_abilities = Keen Eye, Flutter, Tinted Lens
 high_ability = Blow Away
 minimum_level = 10
 diets = Herbivore
@@ -1735,8 +1735,8 @@ base_special_attack = 2
 base_special_defense = 2
 base_speed = 5
 types = Bug, Poison
-basic_abilities = Shield Dust, Run Away
-advanced_abilities = Silk Threads, Swarm
+basic_abilities = Shield Dust
+advanced_abilities = Silk Threads, Swarm, Run Away
 high_ability = Poison Touch
 evolutions = Kakuna,5
 minimum_level = 1
@@ -1764,8 +1764,8 @@ base_special_attack = 3
 base_special_defense = 3
 base_speed = 4
 types = Bug, Poison
-basic_abilities = Shed Skin, Battle Armor
-advanced_abilities = Silk Threads, Magic Guard
+basic_abilities = Shed Skin
+advanced_abilities = Silk Threads, Magic Guard, Battle Armor
 high_ability = Sturdy
 evolutions = Beedrill,10
 minimum_level = 5
@@ -1792,8 +1792,8 @@ base_special_attack = 5
 base_special_defense = 8
 base_speed = 8
 types = Bug, Poison
-basic_abilities = Sniper, Poison Touch
-advanced_abilities = Technician, Swarm
+basic_abilities = Sniper
+advanced_abilities = Technician, Swarm, Poison Touch
 high_ability = Vanguard
 minimum_level = 10
 diets = Herbivore
@@ -1811,6 +1811,101 @@ level_moves = 10:Fury Attack, 13:Focus Energy, 16:Twineedle, 19:Rage, 22:Pursuit
 hm_moves = Cut
 tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Roost, Frustration, Solar Beam, Return, Brick Break, Double Team, Sludge Bomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, False Swipe, Acrobatics, Payback, Giga Impact, Flash, Swords Dance, Struggle Bug, X-Scissor, Infestation, Poison Jab, Swagger, Sleep Talk, U-Turn, Substitute, Rock Smash
 tutor_moves = Air Cutter, Bug Bite, Double-Edge, Drill Run, Electroweb, Endeavor, Fury Cutter, Giga Drain, Knock Off, Ominous Wind, Roost, Silver Wind, Sleep Talk, Snore, String Shot, Swift, Tailwind
+[Sewaddle]
+page = 72
+legendary = False
+base_hp = 5
+base_attack = 5
+base_defense = 7
+base_special_attack = 4
+base_special_defense = 6
+base_speed = 4
+types = Bug, Grass
+basic_abilities = Designer
+advanced_abilities = Full Guard, Leafy Cloak, Swarm
+high_ability = Leaf Rush
+evolutions = Swadloon,15
+minimum_level = 1
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+average_hatch_rate_days = 10
+family = Sewaddle, Swadloon, Leavanny
+capabilities = Overland:5, Swim:2, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Wallclimber, Threaded, Underdog, Leaf Crafter
+height = 1'0",0.3m
+height_class = Small
+weight = 5.5 lbs.,2.5kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:1d6, Combat:2d6, Stealth:2d6, Perception:2d6, Focus:3d6
+level_moves = 1:String Shot, 1:Tackle, 8:Bug Bite, 15:Razor Leaf, 22:Struggle Bug, 29:Endure, 36:Bug Buzz, 43:Flail
+hm_moves = Cut
+tm_moves = Calm Mind, Toxic, Hidden Power, Sunny Day, Light Screen, Protect, Safeguard, Frustration, Solar Beam, Return, Double Team, Facade, Rest, Attract, Round, Energy Ball, Payback, Flash, Struggle Bug, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power
+egg_moves = Agility, Air Slash, Baton Pass, Camouflage, Me First, Mind Reader, Razor Wind, Screech, Silver Wind
+tutor_moves = Bug Bite, Electroweb, Giga Drain, Iron Defense, Magic Coat, Seed Bomb, Signal Beam, Sleep Talk, Snore, Synthesis, Worry Seed
+[Swadloon]
+page = 73
+legendary = False
+base_hp = 6
+base_attack = 6
+base_defense = 9
+base_special_attack = 5
+base_special_defense = 8
+base_speed = 4
+types = Bug, Grass
+basic_abilities = Designer
+advanced_abilities = Full Guard, Leafy Cloak, Swarm
+high_ability = Leaf Rush
+evolutions = Leavanny,30
+minimum_level = 15
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+; this probably shouldn't be here
+average_hatch_rate_days = 10
+family = Sewaddle, Swadloon, Leavanny
+capabilities = Overland:3, Swim:2, High Jump:1, Long Jump:1, Power:2, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Wallclimber, Underdog, Leaf Crafter
+height = 1'8",0.5m
+height_class = Small
+weight = 16.1 lbs.,7.3kg
+weight_class = 1
+skills = Athletics:2d6, Acrobatics:2d6, Combat:2d6, Stealth:3d6+2, Perception:2d6, Focus:3d6
+level_moves = 20:Protect
+hm_moves = Cut
+tm_moves = Calm Mind, Toxic, Hidden Power, Sunny Day, Light Screen, Protect, Safeguard, Frustration, Solar Beam, Return, Double Team, Facade, Rest, Attract, Round, Energy Ball, Payback, Flash, Struggle Bug, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power
+tutor_moves = Bug Bite, Electroweb, Giga Drain, Grass Whistle, Iron Defense, Magic Coat, Razor Leaf, Seed Bomb, Signal Beam, Sleep Talk, Snore, Synthesis, Worry Seed
+[Leavanny]
+page = 74
+legendary = False
+base_hp = 8
+base_attack = 10
+base_defense = 8
+base_special_attack = 7
+base_special_defense = 8
+base_speed = 9
+types = Bug, Grass
+basic_abilities = Designer
+advanced_abilities = Full Guard, Leafy Cloak, Swarm
+high_ability = Leaf Rush
+minimum_level = 30
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+; this probably shouldn't be here
+average_hatch_rate_days = 10
+family = Sewaddle, Swadloon, Leavanny
+capabilities = Overland:7, Swim:4, High Jump:2, Long Jump:2, Power:3, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Wallclimber, Leaf Crafter
+height = 3'11",1.2m
+height_class = Medium
+weight = 45.2 lbs.,20.5kg
+weight_class = 2
+skills = Athletics:3d6+2, Acrobatics:4d6+2, Combat:2d6+2, Stealth:4d6+2, Perception:3d6, Focus:4d6
+level_moves = 8:Bug Bite, 15:Razor Leaf, 22:Struggle Bug, 30:Slash, 32:Helping Hand, 34:Fell Stinger, 36:Leaf Blade, 39:X-Scissor, 43:Entrainment, 46:Swords Dance, 50:Leaf Storm
+hm_moves = Cut
+tm_moves = Hone Claws, Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Safeguard, Frustration, Solar Beam, Return, Double Team, Reflect, Aerial Ace, Facade, Rest, Attract, Round, Steel Wing, Energy Ball, False Swipe, Shadow Claw, Payback, Retaliate, Giga Impact, Flash, Swords Dance, Struggle Bug, X-Scissor, Poison Jab, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power
+tutor_moves = Bug Bite (N), Electroweb, False Swipe (N), Giga Drain, Heal Bell, Helping Hand, Iron Defense, Knock Off, Magic Coat, Seed Bomb, Signal Beam, Sleep Talk, Snore, Synthesis, Worry Seed
 [Fletchling]
 page = 95
 legendary = False
