Venipede, Whirlipede added.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1906,6 +1906,98 @@ level_moves = 8:Bug Bite, 15:Razor Leaf, 22:Struggle Bug, 30:Slash, 32:Helping H
 hm_moves = Cut
 tm_moves = Hone Claws, Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Safeguard, Frustration, Solar Beam, Return, Double Team, Reflect, Aerial Ace, Facade, Rest, Attract, Round, Steel Wing, Energy Ball, False Swipe, Shadow Claw, Payback, Retaliate, Giga Impact, Flash, Swords Dance, Struggle Bug, X-Scissor, Poison Jab, Dream Eater, Grass Knot, Swagger, Sleep Talk, Substitute, Nature Power
 tutor_moves = Bug Bite (N), Electroweb, False Swipe (N), Giga Drain, Heal Bell, Helping Hand, Iron Defense, Knock Off, Magic Coat, Seed Bomb, Signal Beam, Sleep Talk, Snore, Synthesis, Worry Seed
+[Venipede]
+page = 75
+legendary = False
+base_hp = 3
+base_attack = 5
+base_defense = 6
+base_special_attack = 3
+base_special_defense = 4
+base_speed = 6
+types = Bug, Poison
+basic_abilities = Poison Point, Vanguard
+advanced_abilities = Swarm, Speed Boost
+high_ability = Rock Head
+evolutions = Whirlipede,15
+minimum_level = 1
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+average_hatch_rate_days = 10
+family = Venipede, Whirlipede, Scolipede
+capabilities = Overland:5, Swim:1, High Jump:2, Long Jump:2, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Wallclimber, Underdog
+height = 1'4",0.4m
+height_class = Small
+weight = 11.7 lbs.,5.3kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:1d6, Combat:2d6, Stealth:3d6, Perception:2d6, Focus:2d6
+level_moves = 1:Defense Curl, 5:Poison Sting, 8:Screech, 12:Pursuit, 15:Protect, 19:Poison Tail, 22:Bug Bite, 26:Venoshock, 29:Agility, 33:Steamroller, 36:Toxic, 40:Rock Climb, 43:Double-Edge
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Protect, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Payback, Gyro Ball, Struggle Bug, Infestation, Poison Jab, Swagger, Sleep Talk, Substitute, Rock Smash
+egg_moves = Pin Missile, Rock Climb, Spikes, Take Down, Toxic Spikes, Twineedle
+tutor_moves = Bug Bite, Endeavor, Iron Defense, Rollout(N), Sleep Talk, Snore
+[Whirlipede]
+page = 76
+legendary = False
+base_hp = 4
+base_attack = 6
+base_defense = 10
+base_special_attack = 4
+base_special_defense = 8
+base_speed = 5
+types = Bug, Poison
+basic_abilities = Poison Point, Vanguard
+advanced_abilities = Swarm, Speed Boost
+high_ability = Rock Head
+evolutions = Scolipede,30
+minimum_level = 15
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Venipede, Whirlipede, Scolipede
+capabilities = Overland:4, Swim:2, High Jump:1, Long Jump:1, Power:3, Naturewalk:Grassland, Naturewalk:Forest, Underdog
+height = 3'11",1.2m
+height_class = Medium
+weight = 129 lbs.,58.5kg
+weight_class = 4
+skills = Athletics:3d6, Acrobatics:1d6, Combat:2d6, Stealth:3d6+2, Perception:3d6, Focus:3d6+2
+level_moves = 5:Poison Sting, 8:Screech, 12:Pursuit, 15:Protect, 19:Poison Tail, 22:Iron Defense, 23:Bug Bite, 28:Venoshock, 32:Agility, 37:Steamroller, 41:Toxic, 46:Rock Climb, 50:Double-Edge
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Protect, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Payback, Gyro Ball, Struggle Bug, Infestation, Poison Jab, Swagger, Sleep Talk, Substitute, Rock Smash
+tutor_moves = Bug Bite, Endeavor, Iron Defense, Rollout(N), Sleep Talk, Snore
+; [Scolipede]
+; page = 77
+; legendary = False
+; base_hp = 
+; base_attack = 
+; base_defense = 
+; base_special_attack = 
+; base_special_defense = 
+; base_speed = 
+; types = 
+; basic_abilities = 
+; advanced_abilities = 
+; high_ability = 
+; evolutions = 
+; minimum_level = 30
+; diets = 
+; habitats = 
+; egg_groups = 
+; gender_ratio_m = 
+; average_hatch_rate_days = 
+; family = Venipede, Whirlipede, Scolipede
+; capabilities = 
+; height = 
+; height_class = 
+; weight = 
+; weight_class = 
+; skills = Athletics:, Acrobatics:, Combat:, Stealth:, Perception:, Focus:
+; level_moves = 
+; hm_moves = 
+; tm_moves = 
+; egg_moves = 
+; tutor_moves = 
 [Fletchling]
 page = 95
 legendary = False
